# py_modbus_server

./: README.md  pyproject.toml  setup.py
examples/: start_server_blocing_mode.py  start_server_non_blocing_mode.py
examples/modbus_maps/: modbus_map.json  modbus_map.yaml
py_modbus_server/: __init__.py  _auxiliary_functions.py  _types.py  exceptions.py  modbus_map_utils.py  modbus_tcp_server.py
tests/: run_all.py
tests/modbus_tcp_server/: test_modbus_tcp_server.py
